plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'gg.jte.gradle' version '3.2.1'
    id 'org.springframework.boot' version "4.0.2"
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

ext {
    assertjVersion = '3.26.3'
    lombokVersion = '1.18.42'

    junitVersion = '5.11.0'
    jteVersion = '3.2.1'

    servletVersion = '6.1.0'
    tomcatVersion = '11.0.18'

    springBootVersion = '4.0.2'

    validationApiVersion = '3.1.1'
    hibernateValidatorVersion = '8.0.1.Final'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Tests
    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.21.0' // Замените на последнюю версию
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test:${springBootVersion}"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"

    // Validation dependency
    implementation "jakarta.validation:jakarta.validation-api:${validationApiVersion}"
    implementation "org.hibernate.validator:hibernate-validator:${hibernateValidatorVersion}"

    // Tomcat
    implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"

    // Jte
    implementation "gg.jte:jte:${jteVersion}"
    implementation "gg.jte:jte-runtime:${jteVersion}"

    // Sprint 5: Spring Boot Stack (BCORE-14)
    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation "gg.jte:jte-spring-boot-starter-3:${jteVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // PostgreSQL JDBC Driver (для dev и production)
    runtimeOnly 'org.postgresql:postgresql'

    // H2 Database (только для тестов)
    runtimeOnly 'com.h2database:h2:2.3.232'
    testRuntimeOnly 'com.h2database:h2:2.3.232'
}

jte {
    sourceDirectory = file("src/main/jte").toPath()

    contentType = gg.jte.ContentType.Html
    binaryStaticContent = false

    generate()
}

checkstyle {
    toolVersion = '10.12.4'  // актуальная версия на 2025 год для Gradle 9.1
    maxErrors = 0      // даже 1 ошибка (severity=error) → BUILD FAILED
    maxWarnings = 999  // предупреждения (severity=warning) не блокируют сборку
    configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
}

checkstyleTest {
    enabled = false
}

tasks.withType(Checkstyle) {
    exclude '**/jte/**'
    exclude '**/*Jte*Generated*.java'
    exclude '**/*_jte*.java'
    exclude '**/gg/jte/generated/**'
}

// Настройка JaCoCo
jacoco {
    toolVersion = '0.8.14'  // актуальная версия на 2025 год с поддержкой Java 25
}

// Настройка тестов
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport  // генерировать отчёт после тестов
}

// Настройка JaCoCo отчёта
jacocoTestReport {
    dependsOn test  // отчёт генерируется после выполнения тестов
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Jte*Generated*.class',
                    '**/*_jte*',
                    '**/jte/**',
                    'gg/jte/generated/**',
                    '**/service/LeadServiceLegacy.class',
                    '**/repository/InMemoryLeadRepository.class',
                    '**/repository/InMemoryDealRepository.class',
                    '**/Main.class',
                    '**/service/LeadProcessor.class'

            ])
        }))
    }
}

// Настройка проверки покрытия (минимум 80%)
jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.65  // 80% покрытия инструкций
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Jte*Generated*.class',
                    '**/*_jte*',
                    '**/jte/**',
                    'gg/jte/generated/**',
                    '**/service/LeadServiceLegacy.class',
                    '**/repository/InMemoryLeadRepository.class',
                    '**/repository/InMemoryDealRepository.class',
                    '**/Main.class',
                    '**/service/LeadProcessor.class'
            ])
        }))
    }
}

// Интеграция проверок в lifecycle
check {
    dependsOn jacocoTestCoverageVerification
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'ru.mentee.power.crm.Main'
}

bootRun {
    mainClass = 'ru.mentee.power.crm.Application'
}